fix typo in README

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is a "purity testing" progam.  There have been many
+This is a "purity testing" program.  There have been many
 purity tests floating around the net, and this provides
 a more or less automated way to take the tests, and keep
 score, without having to always find pencil and paper.
