moved to FHS comformant positions
Bug-Debian: http://bugs.debian.org/107643

--- a/pt.6
+++ b/pt.6
@@ -145,8 +145,8 @@ and then it would have asked the user for her/his answer.
 For a generic datafile, use the "sample" datafile for the test.
 .SH FILES
 .nf
-/usr/games/lib/purity/scores	the score logfile
-/usr/games/lib/purity/*		test data files
+/var/games/purity.scores	the score logfile
+/usr/share/games/purity/*		test data files
 .fi
 .SH AUTHOR
 Eric Lechner, lechner@ucscb.ucsc.edu
