moved /var/lib/games to /var/games
Bug-Debian: http://bugs.debian.org/107643

--- a/purity.6
+++ b/purity.6
@@ -145,7 +145,7 @@ and then it would have asked the user for her/his answer.
 For a generic datafile, use the "sample" datafile for the test.
 .SH FILES
 .nf
-/var/lib/games/purity.scores	the score logfile
+/var/games/purity.scores	the score logfile
 /usr/share/games/purity/*		test data files
 .fi
 .SH AUTHOR
