--- a/debian/changelog
+++ b/debian/changelog
@@ -1,17 +1,21 @@
-purity (1-14.2) stable-security; urgency=high
+purity (1-17) unstable; urgency=low
 
-  * Non-maintainer upload by security team
-  * Fixed two buffer overflows
-  * Removed .orig file which was left over from patching
+  * Changed fix for overflow to match that of security releases 1-9.1
+    and 1-14.1
 
- -- Martin Schulze <joey@infodrom.org>  Thu, 12 Sep 2002 08:47:22 +0200
+ -- Duncan Findlay <duncf@debian.org>  Thu, 12 Sep 2002 19:46:47 -0400
 
-purity (1-14.1) stable-security; urgency=high
+purity (1-16) unstable; urgency=low
 
-  * Non-maintainer upload by security team
-  * Fixed two buffer overflows
+  * Prevents possible buffer overflow (Closes: #154290)
 
- -- Martin Schulze <joey@infodrom.org>  Tue, 10 Sep 2002 20:23:53 +0200
+ -- Duncan Findlay <duncf@debian.org>  Sun,  8 Sep 2002 22:41:15 -0400
+
+purity (1-15) unstable; urgency=low
+
+  * Change of e-mail address
+
+ -- Duncan Findlay <duncf@debian.org>  Tue, 14 May 2002 19:02:47 -0400
 
 purity (1-14) unstable; urgency=low
 
