--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+purity (1-18) unstable; urgency=low
+
+  * QA upload (setting Maintainer to QA group)
+
+ -- Bernhard R. Link <brlink@debian.org>  Wed, 05 Oct 2011 17:15:17 +0200
+
 purity (1-17) unstable; urgency=low
 
   * Changed fix for overflow to match that of security releases 1-9.1
