fix spelling error in manpage
lintian says it is preceded and not preceeded...

--- a/pt.6
+++ b/pt.6
@@ -117,10 +117,10 @@ and	< conclusion >
 .PP
 Plain text blocks are printed out character for character.
 .PP
-Subject headers are preceeded by their subject numbers, starting
+Subject headers are preceded by their subject numbers, starting
 at 1, and then printed as text blocks.
 .PP
-Questions are preceeded by their numbers, and then prompt the
+Questions are preceded by their numbers, and then prompt the
 user to answer the question, keeping track of the user's
 current score.
 .PP
